# rust_pool_sim

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  eslint.config.mjs  package.json
.github/workflows/: ci.yml
frontend/: index.html  main.js  style.css
scripts/: validate_setup.sh
src/: lib.rs
