[package]
name = "rust_pool_sim"
version = "0.1.0"
edition = "2021"
description = "A Rust-based pool simulation core targeting WebAssembly with an HTML5 Canvas frontend."
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust_pool_sim"
homepage = "https://github.com/example/rust_pool_sim"
authors = ["RustPoolSimProjectGenesis AI Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
restriction = "allow"
dbg_macro = "deny"
multiple-crate-versions = "warn"
unwrap_used = "warn"
expect_used = "warn"